    directory of the libgigedit library
  * Mac OS X: fixed "recently used" in file dialogs
  * Mac OS X: avoid crash when starting gigedit as an application
    bundle
  * Mac OS X: try to launch the GUI on the process's "main" thread
  * show build date and libgig version number in about dialog
  * added dialog for editing the CtrlTrigger and Legato midi rules

Version 0.2.0 (2009-07-31)

  * fixed file properties dialog - properties now can be edited
  * gig files where regions are not internally ordered are now handled
  * the resize mouse pointer is not shown anymore for regions that
    can't be resized
  * the region and dimregion chooser widgets are now resizable
  * bugfix: sometimes you could not delete more than one dimension
  * filter headers are now also greyed out when the filter is inactive
  * autoconf fix: LS plugin dirs with digits in their prefix
    (e.g. "/usr/lib64/foo") are now resolved in relative dirs as well
    (show a warning when resolving the relative path failed)
  * keys on the virtual keyboard now highlight on note on events on
    sampler side
  * virtual keyboard can now trigger notes for the sampler (only in
    live-mode of course)
  * implemented alternative behavior for the virtual MIDI keyboard
    (selectable by combobox below the keyboard)
  * show absolute velocity value of note-on & note-off events below
    the virtual MIDI keyboard
  * renamed misleading names regarding the gig format's "keyswitching"
    feature (the dimension is now displayed as "keyswitching" instead of
    "keyboard" in the dimregchooser widget and the two parameters for
    defining the actual keyswitching area on the keyboard in the instruments
    properties dialog are now called "Keyswitching range low/high" instead of
    "Dimension key range low/high")
  * added "replace all samples" function to samples popup menu
    (patch by Anders Dahnielson, a bit extended, fixes #73)
  * bugfix: dimension manager window didn't update when another region